
  . added Slider widgets
  . added Table widgets
  . textbox() function
  . InputDialog.getResults() returns a single value: a dictionary with the
    values in the dialog if accepted, an empty dictionary if rejected.
  . The timeout of the InputDialog.getResults() function can result in
    either an accept or a reject signal.
  . The accept and timeout status of an InputDialog can be consulted after
    the widget was closed.

- ScriptsMenu:

  . The scripts loading procedure in the ScriptsMenu widget has been changed
    to account for future enhancements, but is largely compatible with the old
    use in the GUI:

    + ScriptsMenu(files=somepath) should be replaced with ScriptsMenu(dir=somepath)
    + ScriptsMenu(files=[list of files]) remains
  
  . The ScriptsMenu now has an option to classify all the scripts in a
    directory according to some keywords contained in the script's docstring.
    The classification can then be stored in appropriate symlinks and on reload
    the classified scripts will be presented in the menu.
 

Drawing
-------

- When rendering TriSurfaces with lighting, there is on option to use
  averaged normals at the vertices of the triangles, providing a much smoother
  look of the surface. An optional toolbar button toggles between triangle
  based and averaged normals.


Scripting
---------

- showText() displays a text and waits for user action
- closeGui() starts the GUI


Plugins
-------

Most of the plugins have changed substantially, and until they stabilized
somewhat, we do not give details on the numerous changes.

- isopar.py: a new plugin providing a framework for isoparametric 
  transformations of coordinate sets


Examples
--------

- Added the SuperEgg example
- Added the Cones example
- Added the ConnectMesh example
- Added the Light example
- Added the Projection example
- Added the Tori example
- Added the SuperShape example
- Added the Bezier example
- Removed the (unfinished) DoubleDiamatic example


Manual
------