@@ -124,6 +124,8 @@ somewhat, we do not give details on the numerous changes.
 Examples
 --------
 
+Examples are now classified in the menu, according to level, topics and techniques.
+
 - Added the SuperEgg example
 - Added the Cones example
 - Added the ConnectMesh example
